--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Mobile redirect script by https://pagecrafter.com -->
     <script type="text/javascript" src="js/redirection-mobile.js"></script><script type="text/javascript">// <![CDATA[
      SA.redirection_mobile ({
-     mobile_url : "C:\\Users\\Mathew\\Documents\\Website\\mobile.html",
+     mobile_url : "https://mjennings2.github.io/mobile.html",
      });
      
     // ]]></script>
@@ -52,7 +52,7 @@
             <table id = "rright">
                 <tr>
                     <td>
-                      <img src="images/PictureOfMe.png" id="picture-of-me" height="400px" align="center">
+                      <img src="images/Me.png" id="picture-of-me" height="400px" align="center">
                   </td>
                 </tr>
                 <tr>
