--- a/mobile.html
+++ b/mobile.html
@@ -27,7 +27,7 @@
     <div id = "body">
         <div id="about">
             <h1 class="title">About Me</h1>
-			<img src="images/PictureOfMe.png" id="picture-of-me" height="400px" align="center">
+			<img src="images/Me" id="picture-of-me" height="400px" align="center">
             <p class="body">Skilled Ski Coach and Sailing Instructor with in-depth knowledge of how to teach kids to give them the best start in sailing or skiing. Consistently motivates and inspires players to work on improving their skills every day. Looking to use what I've learned at school to gain practical expirience in the software engineering field.</p>
             <p class="body">Since first taking AP Computer Science In grade 11 and becoming the head of my school's programming club, I have gained a love for programming both in school and as a hobby. My goal is to become a Software Engineer.</p>
             <h3 class="body">Education</h3>
