--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Mobile redirect script by https://pagecrafter.com -->
     <script type="text/javascript" src="js/redirection-mobile.js"></script><script type="text/javascript">// <![CDATA[
      SA.redirection_mobile ({
-     mobile_url : "/mobile.html",
+     mobile_url : "www.google.ca",
      });
      
     // ]]></script>
