--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      });
      
     // ]]></script>
+   
 </head>
 
 <body >
@@ -59,7 +60,10 @@
                     <td>
                         <div id="toolbox">
                             <h2>Tool Box</h2>
-                            <b>Skills:</b><p>Leading, Motivating, Problem solving, Communication.</p>
+                            <p><b>Skills: </b>Leading, Motivating, Problem solving, Communication.</p>
+                            <p><b>Languages and Libraries: </b>C, CSS, HTML, Java, Javascript (JQuery), MATLAB.</p>
+                            <p><b>Hardware and Operating Systems: </b>Arduino, Macintosh, Ubuntu, Windows.</p>
+                            <p><b>Other Program Proficiency: </b>Adobe Suite (Acrobat, After Effects, Photoshop, Priemier), Microsoft Suite (Excel, OneNote, Powerpoint, Publisher, Word) .</p>
 
                         </div>
                     </td>
