--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Mathew Jennings</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
-    <!-- Mobile redirect script by https://pagecrafter.com -->
-    <script type="text/javascript" src="js/redirection-mobile.js"></script><script type="text/javascript">// <![CDATA[
-     SA.redirection_mobile ({
-     mobile_url : "mjennings2.github.io/mobile.html",
-     });
-     
-    // ]]></script>
-   
+    <link href="css/index.css" rel="stylesheet"><!-- Mobile redirect script by https://pagecrafter.com -->
+
+    <script src="js/redirection-mobile.js" type="text/javascript">
+    </script>
+    <script type="text/javascript">
+           // <![CDATA[
+           SA.redirection_mobile({
+               mobile_url: "mjennings2.github.io/mobile.html",
+           });
+
+           // ]]>
+    </script>
 </head>
-
-<body >
-
+<body>
     <div id="menu">
         <table id="menutable">
             <tr>
-                <td><a href="#1" class="menulink">Home</a></td>
-                <td><a href="#2" class="menulink">Work History</a></td>
-                <td><a href="#3" class="menulink">Certifications</a></td>
-                <td><a href="#4" class="menulink">Athletics</a></td>
-                <td><a href="#5" class="menulink">Connect</a></td>
+                <td>
+                    <a class="menulink" href="index.html">Home</a>
+                </td>
+                <td>
+                    <a class="menulink" href="workhistory.html">Work History</a>
+                </td>
+                <td>
+                    <a class="menulink" href="#3">Certifications</a>
+                </td>
+                <td>
+                    <a class="menulink" href="#4">Athletics</a>
+                </td>
+                <td>
+                    <a class="menulink" href="#5">Connect</a>
+                </td>
             </tr>
-
         </table>
-
     </div>
-
-    <div id = "body">
+    <div id="body">
         <div id="about">
             <h1 class="title">About Me</h1>
-
             <p class="body">Skilled Ski Coach and Sailing Instructor with in-depth knowledge of how to teach kids to give them the best start in sailing or skiing. Consistently motivates and inspires players to work on improving their skills every day. Looking to use what I've learned at school to gain practical expirience in the software engineering field.</p>
             <p class="body">Since first taking AP Computer Science In grade 11 and becoming the head of my school's programming club, I have gained a love for programming both in school and as a hobby. My goal is to become a Software Engineer.</p>
             <h3 class="body">Education</h3>
             <table>
                 <tr>
                     <td>
-                        <center class = "image"><img src="images/queens.png" width="200px" height="200px"></center>
+                        <center class="image">
+                            <img height="200px" src="images/queens.png" width="200px">
+                        </center>
                     </td>
                     <td>
                         <p class="body">Attending Queens University completeing a bachlors degree in <a href="https://engineering.queensu.ca/explore-programs/undergraduate-programs/mathematics-and-engineering/">Matamatics and Engineering</a>, Computing and Communications Option.</p>
@@ -50,21 +58,18 @@
             </table>
         </div>
         <div id="right">
-            <table id = "rright">
+            <table id="rright">
                 <tr>
-                    <td>
-                      <img src="images/Me.png" id="picture-of-me" height="400px" align="center">
-                  </td>
+                    <td><img align="center" height="400px" id="picture-of-me" src="images/Me.png"></td>
                 </tr>
                 <tr>
                     <td>
                         <div id="toolbox">
                             <h2>Tool Box</h2>
-                            <p><b>Skills: </b>Leading, Motivating, Problem solving, Communication.</p>
-                            <p><b>Languages and Libraries: </b>C, CSS, HTML, Java, Javascript (JQuery), MATLAB.</p>
-                            <p><b>Hardware and Operating Systems: </b>Arduino, Macintosh, Ubuntu, Windows.</p>
-                            <p><b>Other Program Proficiency: </b>Adobe Suite (Acrobat, After Effects, Photoshop, Priemier), Microsoft Suite (Excel, OneNote, Powerpoint, Publisher, Word) .</p>
-
+                            <p><b>Skills:</b> Leading, Motivating, Problem solving, Communication.</p>
+                            <p><b>Languages and Libraries:</b> C, CSS, HTML, Java, Javascript (JQuery), MATLAB.</p>
+                            <p><b>Hardware and Operating Systems:</b> Arduino, Macintosh, Ubuntu, Windows.</p>
+                            <p><b>Other Program Proficiency:</b> Adobe Suite (Acrobat, After Effects, Photoshop, Priemier), Microsoft Suite (Excel, OneNote, Powerpoint, Publisher, Word) .</p>
                         </div>
                     </td>
                 </tr>
@@ -72,5 +77,4 @@
         </div>
     </div>
 </body>
-
 </html>
