--- a/workhistorymobile.html
+++ b/workhistorymobile.html
@@ -24,12 +24,12 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="menulink" href="workhistorymobile.html">Work History</a>
+                        <a class="menulink" href="workhistorymobile.html">Work History and Volenteering</a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a class="menulink" href="#3">Certifications</a>
+                        <a class="menulink" href="certificationsmobile.html">Certifications</a>
                     </td>
                 </tr>
                 <tr>
