--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a class="menulink" href="index.html">Home</a>
                 </td>
                 <td>
-                    <a class="menulink" href="workhistory.html">Work History</a>
+                    <a class="menulink" href="workhistory.html">Work History and Volenteering</a>
                 </td>
                 <td>
-                    <a class="menulink" href="#3">Certifications</a>
+                    <a class="menulink" href="certifications.html">Certifications</a>
                 </td>
                 <td>
                     <a class="menulink" href="#4">Athletics</a>
@@ -43,6 +43,14 @@
             <h1 class="title">About Me</h1>
             <p class="body">Skilled Ski Coach and Sailing Instructor with in-depth knowledge of how to teach kids to give them the best start in sailing or skiing. Consistently motivates and inspires players to work on improving their skills every day. Looking to use what I've learned at school to gain practical expirience in the software engineering field.</p>
             <p class="body">Since first taking AP Computer Science In grade 11 and becoming the head of my school's programming club, I have gained a love for programming both in school and as a hobby. My goal is to become a Software Engineer.</p>
+            <h3 class="body">Accomplishments</h3>
+            <ul>
+                <li>Won the Computer Science Award for academic achievement in 2015 and 2016. I was selected out of 80 students.</li>
+                <li>Awarded Head's Honour Roll for having an academic average over 90% in Grade 11 and 12.</li>
+                <li>Represented Craigleith Ski Club in the Ontario K1 provincial ski championships for two years in a row (2011, 2012) and the Ontario K2 provincial ski championships for 3 years (2013, 2014, and 2015).</li>
+                <li>Represented Queen City Yacht Club in Steerers' Regatta and Four Sister's Regatta.</li>
+
+            </ul>
             <h3 class="body">Education</h3>
             <table>
                 <tr>
