--- a/workhistory.html
+++ b/workhistory.html
@@ -5,8 +5,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet"><!-- Mobile redirect script by https://pagecrafter.com -->
 
-	<script src="js/redirection-mobile.js" type="text/javascript">
-	</script>
 </head>
 <body>
 	<div id="menu">
@@ -16,10 +14,10 @@
 					<a class="menulink" href="index.html">Home</a>
 				</td>
 				<td>
-					<a class="menulink" href="workhistory.html">Work History</a>
+					<a class="menulink" href="workhistory.html">Work History and Volenteering</a>
 				</td>
 				<td>
-					<a class="menulink" href="#3">Certifications</a>
+					<a class="menulink" href="certifications.html">Certifications</a>
 				</td>
 				<td>
 					<a class="menulink" href="#4">Athletics</a>
