--- a/workhistorymobile.html
+++ b/workhistorymobile.html
@@ -49,7 +49,7 @@
 	<div id = "whbody" >
 		<table>
 			<tr>
-				<td><a href = "http://www.craigleith.com/"><img src="images/craigleith.png" id = "logo" ></a></td>
+				<td><a href = "http://www.craigleith.com/"><img src="images/craigleith.png" id = "craigleithlogo" class = "logo"></a></td>
 			</tr>
 			<tr>
 				<td><p><b>Under 10 Ski Coach<br>Craigleith Ski Club</b> - The Blue Mountains<br>
@@ -61,7 +61,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td><a href = "https://www.qcyc.ca/"><img src="images/QCYC.png" id = "logo" ></a></td>
+				<td><a href = "https://www.qcyc.ca/"><img src="images/QCYC.png" class = "logo" ></a></td>
 			</tr>
 			<tr>
 				<td><p><b>Sailing Instructor<br>Queen City Yacht Club</b> - Algonquin Island, Toronto<br>
@@ -74,7 +74,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td><img src="images/shingling.png" id = "logo" ></td>
+				<td><img src="images/shingling.png" class = "logo" ></td>
 			</tr>
 			<tr>
 				<td><p><b>Roof Shingler<br>Self Employed</b> - Toronto, Ontario<br>
