--- a/mobile.html
+++ b/mobile.html
@@ -42,6 +42,11 @@
                         <a class="menulink" href="#5">Connect</a>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <a class="menulink" href="index.html">Back to Desktop</a>
+                    </td>
+                </tr>
             </table>
         </div>
     </div>
