--- a/workhistory.html
+++ b/workhistory.html
@@ -4,7 +4,14 @@
 	<title>Mathew Jennings</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet"><!-- Mobile redirect script by https://pagecrafter.com -->
+	<script type="text/javascript">
+           // <![CDATA[
+           SA.redirection_mobile({
+               mobile_url: "mjennings2.github.io/workhistorymobile.html",
+           });
 
+           // ]]>
+    </script>
 </head>
 <body>
 	<div id="menu">
