--- a/athletics.html
+++ b/athletics.html
@@ -20,10 +20,10 @@
 					<a class="menulink" href="certifications.html">Certifications</a>
 				</td>
 				<td>
-					<a class="menulink" href="#4">Athletics</a>
+					<a class="menulink" href="athletics.html">Athletics</a>
 				</td>
 				<td>
-					<a class="menulink" href="#5">Connect</a>
+					<a class="menulink" href="connect.html">Connect</a>
 				</td>
 			</tr>
 		</table>
