--- a/workhistory.html
+++ b/workhistory.html
@@ -4,6 +4,8 @@
 	<title>Mathew Jennings</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet"><!-- Mobile redirect script by https://pagecrafter.com -->
+	<script src="js/redirection-mobile.js" type="text/javascript">
+    </script>
 	<script type="text/javascript">
            // <![CDATA[
            SA.redirection_mobile({
@@ -27,10 +29,10 @@
 					<a class="menulink" href="certifications.html">Certifications</a>
 				</td>
 				<td>
-					<a class="menulink" href="#4">Athletics</a>
+					<a class="menulink" href="athletics.html">Athletics</a>
 				</td>
 				<td>
-					<a class="menulink" href="#5">Connect</a>
+					<a class="menulink" href="connect.html">Connect</a>
 				</td>
 			</tr>
 		</table>
