athletics done, missing photo

--- a/athletics.html
+++ b/athletics.html
@@ -28,3 +28,27 @@
 			</tr>
 		</table>
 	</div>
+	<div id = abody>
+		<table>
+			<tr>
+				<td>
+					<h2>Skiing</h2>
+					<p>Skiing has been a strong passion since I was four. It has grown from a simple hobby to one of my two favorite sports. I spent seven years in the elite program from 2008 to 2015 racing across Ontario and training across North America. I have developed many skills including the commitment required to ski at a high level while still keeping my marks up at School. I have turned my love for skiing into a job opportunity as I am now a ski coach at my home club, Craigleith Ski Club.</p>
+				</td>
+				<td>
+					<img src="images/skiing.png" class="pic">
+				</td>
+				
+			</tr>
+			<tr>
+				<td>
+					<h2>Sailing</h2>
+					<p>I have been sailing since I was eight years old at varying clubs including Ashbridge's Bay Yacht Club, Royal Canadian Yacht Club, and Queen City Yacht Club, eventually achieving my CANSail Level 5. Over the years, I have developed a love for both leisure sailing and racing. This love grows with every day of sailing as I make friends and gain experience.</p>
+				</td>
+				<td>
+					<img src="images/sailing.png" class="pic">
+				</td>
+			</tr>
+	</div>		
+</body>
+</html>
