--- a/mobile.html
+++ b/mobile.html
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="menulink" href="#4">Athletics</a>
+                        <a class="menulink" href="athleticsmobile.html">Athletics</a>
                     </td>
                 </tr>
                 <tr>
