--- a/athleticsmobile.html
+++ b/athleticsmobile.html
@@ -50,7 +50,7 @@
             </table>
         </div>
 	</div>
-	<div id = abody>
+	<div id = "abody">
 		<table>
 			<tr>
 				<td>
@@ -76,5 +76,21 @@
 				</td>
 			</tr>
 	</div>		
+	<script>
+           var acc = document.getElementsByClassName("container");
+           var i;
+
+           for (i = 0; i < acc.length; i++) {
+               acc[i].addEventListener("click", function() {
+                   this.classList.toggle("active");
+                   var panel = this.nextElementSibling;
+                   if (panel.style.display === "block") {
+                       panel.style.display = "none";
+                   } else {
+                       panel.style.display = "block";
+                   }
+               });
+           }
+    </script>
 </body>
 </html>
