--- a/athleticsmobile.html
+++ b/athleticsmobile.html
@@ -44,7 +44,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="menulink" href="certifications.html">Back to Desktop</a>
+                        <a class="menulink" href="athletics.html">Desktop Version</a>
                     </td>
                 </tr>
             </table>
