--- a/mobile.html
+++ b/mobile.html
@@ -44,7 +44,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="menulink" href="index.html">Back to Desktop</a>
+                        <a class="menulink" href="index.html">Desktop Version</a>
                     </td>
                 </tr>
             </table>
