Everything is done except pic on athletics page
uploading to test redirects and "desktop version" button

--- a/mobile.html
+++ b/mobile.html
@@ -39,7 +39,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="menulink" href="#5">Connect</a>
+                        <a class="menulink" href="connectmobile.html">Connect</a>
                     </td>
                 </tr>
                 <tr>
@@ -61,7 +61,6 @@
                 <li>Awarded Head's Honour Roll for having an academic average over 90% in Grade 11 and 12.</li>
                 <li>Represented Craigleith Ski Club in the Ontario K1 provincial ski championships for two years in a row (2011, 2012) and the Ontario K2 provincial ski championships for 3 years (2013, 2014, and 2015).</li>
                 <li>Represented Queen City Yacht Club in Steerers' Regatta and Four Sister's Regatta.</li>
-
             </ul>
             <h3 class="body">Education</h3>
             <center class="image">
@@ -78,20 +77,20 @@
         </div>
     </div>
     <script>
-           var acc = document.getElementsByClassName("container");
-           var i;
+              var acc = document.getElementsByClassName("container");
+              var i;
 
-           for (i = 0; i < acc.length; i++) {
-               acc[i].addEventListener("click", function() {
-                   this.classList.toggle("active");
-                   var panel = this.nextElementSibling;
-                   if (panel.style.display === "block") {
-                       panel.style.display = "none";
-                   } else {
-                       panel.style.display = "block";
-                   }
-               });
-           }
+              for (i = 0; i < acc.length; i++) {
+                  acc[i].addEventListener("click", function() {
+                      this.classList.toggle("active");
+                      var panel = this.nextElementSibling;
+                      if (panel.style.display === "block") {
+                          panel.style.display = "none";
+                      } else {
+                          panel.style.display = "block";
+                      }
+                  });
+              }
     </script>
 </body>
 </html>
