--- a/workhistory.html
+++ b/workhistory.html
@@ -3,17 +3,18 @@
 <head>
 	<title>Mathew Jennings</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
-	<link href="css/index.css" rel="stylesheet"><!-- Mobile redirect script by https://pagecrafter.com -->
+	<link href="css/index.css" rel="stylesheet">
+	<!-- Mobile redirect script by https://pagecrafter.com -->
 	<script src="js/redirection-mobile.js" type="text/javascript">
-    </script>
+	</script>
 	<script type="text/javascript">
-           // <![CDATA[
-           SA.redirection_mobile({
-               mobile_url: "mjennings2.github.io/workhistorymobile.html",
-           });
+	          // <![CDATA[
+	          SA.redirection_mobile({
+	              mobile_url: "mjennings2.github.io/workhistorymobile.html",
+	          });
 
-           // ]]>
-    </script>
+	          // ]]>
+	</script>
 </head>
 <body>
 	<div id="menu">
@@ -37,35 +38,45 @@
 			</tr>
 		</table>
 	</div>
-
-	<div id = "body">
+	<div id="body">
 		<table>
 			<tr>
-				<td><a href = "http://www.craigleith.com/"><img src="images/craigleith.png" id = "logo" ></a></td>
-				<td><p><b>Under 10 Ski Coach<br>Craigleith Ski Club</b> - The Blue Mountains<br>
+				<td>
+					<a href="http://www.craigleith.com/"><img id="logo" src="images/craigleith.png"></a>
+				</td>
+				<td>
+					<p><b>Under 10 Ski Coach<br>
+					Craigleith Ski Club</b> - The Blue Mountains<br></p>
 					<ul>
 						<li>Experienced racer deploying my strong skills to coach entry level ski racing to a team of eight and nine-year olds, serving as a positive role model for team participants and community members.</li>
 						<li>Support on hill activities including assisting the maintenance crew to set up protective netting on the hills and working on ski courses for racers.</li>
-						<li>Support and encourage young athletes at some of the first races of their ski career - which can be some of the most important races in shaping their love of ski-racing.</li> 
+						<li>Support and encourage young athletes at some of the first races of their ski career - which can be some of the most important races in shaping their love of ski-racing.</li>
 					</ul>
 				</td>
 			</tr>
 			<tr>
-				<td><a href = "https://www.qcyc.ca/"><img src="images/QCYC.png" id = "logo" ></a></td>
-				<td><p><b>Sailing Instructor<br>Queen City Yacht Club</b> - Algonquin Island, Toronto<br>
+				<td>
+					<a href="https://www.qcyc.ca/"><img id="logo" src="images/QCYC.png"></a>
+				</td>
+				<td>
+					<p><b>Sailing Instructor<br>
+					Queen City Yacht Club</b> - Algonquin Island, Toronto<br></p>
 					<ul>
 						<li>Taught CANSail 1 & 2 athletes sailing skills, ensured safety in boats, and motivated athletes to improve their skills. Skills taught ranged from points of sail to proper tacking techniques. Also gained experience teaching CANSail 3 & 4 athletes filling in for instructors as needed.</li>
-						<li>Led on-shore activities including various team building games such as volleyball, soccer, "opti-ball", etc. </li>
-						<li>Effective problem solver and strong ability to manage any issues that arose with boats on the water.</li> 
+						<li>Led on-shore activities including various team building games such as volleyball, soccer, "opti-ball", etc.</li>
+						<li>Effective problem solver and strong ability to manage any issues that arose with boats on the water.</li>
 						<li>Regularly maintained dinghies including the Club 420 and the Laser Pico.</li>
 					</ul>
 				</td>
 			</tr>
 			<tr>
-				<td><img src="images/shingling.png" id = "logo" ></td>
-				<td><p><b>Roof Shingler<br>Self Employed</b> - Toronto, Ontario<br>
+				<td><img id="logo" src="images/shingling.png"></td>
+				<td>
+					<p><b>Roof Shingler<br>
+					Self Employed</b> - Toronto, Ontario<br></p>
 					<ul>
 						<li>Through my own initiative, developed skills to install, repair, and replace single-ply roofing systems on small roofs that big roofing companies refused to roof. Independently solicited work and completed a number of projects.</li>
+					</ul>
 				</td>
 			</tr>
 		</table>
