--- a/athletics.html
+++ b/athletics.html
@@ -3,8 +3,18 @@
 <head>
 	<title>Mathew Jennings</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
-	<link href="css/index.css" rel="stylesheet"><!-- Mobile redirect script by https://pagecrafter.com -->
+	<link href="css/index.css" rel="stylesheet">
+	<!-- Mobile redirect script by https://pagecrafter.com -->
+	<script src="js/redirection-mobile.js" type="text/javascript">
+	</script>
+	<script type="text/javascript">
+	          // <![CDATA[
+	          SA.redirection_mobile({
+	              mobile_url: "mjennings2.github.io/athleticsmobile.html.html",
+	          });
 
+	          // ]]>
+	</script>
 </head>
 <body>
 	<div id="menu">
@@ -28,27 +38,23 @@
 			</tr>
 		</table>
 	</div>
-	<div id = "abody">
+	<div id="abody">
 		<table>
 			<tr>
 				<td>
 					<h2>Skiing</h2>
 					<p>Skiing has been a strong passion since I was four. It has grown from a simple hobby to one of my two favorite sports. I spent seven years in the elite program from 2008 to 2015 racing across Ontario and training across North America. I have developed many skills including the commitment required to ski at a high level while still keeping my marks up at School. I have turned my love for skiing into a job opportunity as I am now a ski coach at my home club, Craigleith Ski Club.</p>
 				</td>
-				<td>
-					<img src="images/skiing.png" class="pic">
-				</td>
-				
+				<td><img class="pic" src="images/skiing.png"></td>
 			</tr>
 			<tr>
 				<td>
 					<h2>Sailing</h2>
 					<p>I have been sailing since I was eight years old at varying clubs including Ashbridge's Bay Yacht Club, Royal Canadian Yacht Club, and Queen City Yacht Club, eventually achieving my CANSail Level 5. Over the years, I have developed a love for both leisure sailing and racing. This love grows with every day of sailing as I make friends and gain experience.</p>
 				</td>
-				<td>
-					<img src="images/sailing.png" class="pic">
-				</td>
+				<td><img class="pic" src="images/sailing.png"></td>
 			</tr>
-	</div>		
+		</table>
+	</div>
 </body>
 </html>
