--- a/athleticsmobile.html
+++ b/athleticsmobile.html
@@ -1,96 +1,92 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mathew Jennings</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
-    <link href="css/mobile.css" rel="stylesheet">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <script src="js/index.js" type="text/javascript">
-    </script>
+  <title>Mathew Jennings</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
+  <link href="css/mobile.css" rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <script src="js/index.js" type="text/javascript">
+  </script>
 </head>
 <body>
-	<div id="menu">
-        <div class="container" onclick="expand(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
-        <div class="panel">
-            <table id="menutable">
-                <tr>
-                    <td>
-                        <a class="menulink" href="mobile.html">Home</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="workhistorymobile.html">Work History and Volenteering</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="certificationsmobile.html">Certifications</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="athleticsmobile.html">Athletics</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="#5">Connect</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="athletics.html">Desktop Version</a>
-                    </td>
-                </tr>
-            </table>
-        </div>
-	</div>
-	<div id = "abody">
-		<table>
-			<tr>
-				<td>
-					<h2>Skiing</h2>
-					<p>Skiing has been a strong passion since I was four. It has grown from a simple hobby to one of my two favorite sports. I spent seven years in the elite program from 2008 to 2015 racing across Ontario and training across North America. I have developed many skills including the commitment required to ski at a high level while still keeping my marks up at School. I have turned my love for skiing into a job opportunity as I am now a ski coach at my home club, Craigleith Ski Club.</p>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<img src="images/skiing.png" class="logo">
-				</td>
-				
-			</tr>
-			<tr>
-				<td>
-					<h2>Sailing</h2>
-					<p>I have been sailing since I was eight years old at varying clubs including Ashbridge's Bay Yacht Club, Royal Canadian Yacht Club, and Queen City Yacht Club, eventually achieving my CANSail Level 5. Over the years, I have developed a love for both leisure sailing and racing. This love grows with every day of sailing as I make friends and gain experience.</p>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<img src="images/sailing.png" class="logo">
-				</td>
-			</tr>
-	</div>		
-	<script>
-           var acc = document.getElementsByClassName("container");
-           var i;
+  <div id="menu">
+    <div class="container" onclick="expand(this)">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+    <div class="panel">
+      <table id="menutable">
+        <tr>
+          <td>
+            <a class="menulink" href="mobile.html">Home</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="workhistorymobile.html">Work History and Volenteering</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="certificationsmobile.html">Certifications</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="athleticsmobile.html">Athletics</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="connectmobile.html">Connect</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="athletics.html">Desktop Version</a>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div id="abody">
+    <script>
+             var acc = document.getElementsByClassName("container");
+             var i;
 
-           for (i = 0; i < acc.length; i++) {
-               acc[i].addEventListener("click", function() {
-                   this.classList.toggle("active");
-                   var panel = this.nextElementSibling;
-                   if (panel.style.display === "block") {
-                       panel.style.display = "none";
-                   } else {
-                       panel.style.display = "block";
-                   }
-               });
-           }
+             for (i = 0; i < acc.length; i++) {
+                 acc[i].addEventListener("click", function() {
+                     this.classList.toggle("active");
+                     var panel = this.nextElementSibling;
+                     if (panel.style.display === "block") {
+                         panel.style.display = "none";
+                     } else {
+                         panel.style.display = "block";
+                     }
+                 });
+             }
     </script>
+    <table>
+      <tr>
+        <td>
+          <h2>Skiing</h2>
+          <p>Skiing has been a strong passion since I was four. It has grown from a simple hobby to one of my two favorite sports. I spent seven years in the elite program from 2008 to 2015 racing across Ontario and training across North America. I have developed many skills including the commitment required to ski at a high level while still keeping my marks up at School. I have turned my love for skiing into a job opportunity as I am now a ski coach at my home club, Craigleith Ski Club.</p>
+        </td>
+      </tr>
+      <tr>
+        <td><img class="logo" src="images/skiing.png"></td>
+      </tr>
+      <tr>
+        <td>
+          <h2>Sailing</h2>
+          <p>I have been sailing since I was eight years old at varying clubs including Ashbridge's Bay Yacht Club, Royal Canadian Yacht Club, and Queen City Yacht Club, eventually achieving my CANSail Level 5. Over the years, I have developed a love for both leisure sailing and racing. This love grows with every day of sailing as I make friends and gain experience.</p>
+        </td>
+      </tr>
+      <tr>
+        <td><img class="logo" src="images/sailing.png"></td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
