--- a/certifications.html
+++ b/certifications.html
@@ -3,17 +3,18 @@
 <head>
 	<title>Mathew Jennings</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
-	<link href="css/index.css" rel="stylesheet"><!-- Mobile redirect script by https://pagecrafter.com -->
+	<link href="css/index.css" rel="stylesheet">
+	<!-- Mobile redirect script by https://pagecrafter.com -->
 	<script src="js/redirection-mobile.js" type="text/javascript">
-    </script>
+	</script>
 	<script type="text/javascript">
-           // <![CDATA[
-           SA.redirection_mobile({
-               mobile_url: "mjennings2.github.io/certificationsmobile.html",
-           });
+	          // <![CDATA[
+	          SA.redirection_mobile({
+	              mobile_url: "mjennings2.github.io/certificationsmobile.html",
+	          });
 
-           // ]]>
-    </script>
+	          // ]]>
+	</script>
 </head>
 <body>
 	<div id="menu">
@@ -37,12 +38,9 @@
 			</tr>
 		</table>
 	</div>
-
-	<div id = "cbody">
-		<h2>I currently hold the following certifications:</h2>
-		
-		<a href = "https://ontariosailing.ca/"><img src="images/ontariosailing.png" width="688px"></a>
-		<ul>	
+	<div id="cbody">
+		<h2>I currently hold the following certifications:</h2><a href="https://ontariosailing.ca/"><img src="images/ontariosailing.png" width="688px"></a>
+		<ul>
 			<li>CANSail Fundamentals Course: Successfully completed the CANSail Fundamentals Course over 5 weeks with the Ontario Sailing Association in the fall of 2016. The skills learned included the fundamentals of create a proper lesson plan for sailing, how to evaluate the safety of a situation, and how to resolve problems associated with elite athletes (more specifically those associated with sailing).</li>
 			<li>Boat Safety Course: Completed Boat Safety Course in April 2017</li>
 			<li>CANSail 1 & 2 Trained Certification: Completed CANSail 1 & 2 Instructor Course in May of 2017.</li>
@@ -50,18 +48,15 @@
 			<li>LTSD: Completed the Long-Term Sailing Development Online Course.</li>
 			<li>Pleasure Craft Operators Card: License to drive all power boats and personal water craft.</li>
 			<li>Powered Vessel Operator's permit: License to drive power boats in the inner and outer harbors of Toronto Standard First aid with CPR & AED: Successfully completed Standard First Aid Level C Course with Toronto CPR in August 2016</li>
-		</ul>
-		<a href = "http://canskicoach.org/index.php/en/"><img src="images/cscf.png"></a>
+		</ul><a href="http://canskicoach.org/index.php/en/"><img src="images/cscf.png"></a>
 		<ul>
 			<li>Canadian Ski Coaching Federation Entry Level (EL) Trained Course: Successfully completed a 2-day entry level coaching course in March 2016 at Craigleith Ski Club. This certification allows me to coach both beginner skiers and ski racers.</li>
 			<li>Canadian Ski Coaching Federation EL Certification Process: Was shadowed for a day by a High Performance (HP) Level coach to get EL certified status.</li>
-			<li>Canadian Ski Coaching Federation Development Level (DL) Trained Certification: Successfully completed a 5-day Development level coaching course in February 2017 at Craigleith Ski Club. This certification allows me to set Slalom and Giant Slalom courses in accordance with the rules set by the Federation of Independent Skiers. Two Days of the course were spent Learning NCCP coaching Theory relevant to all sports.</li> 
+			<li>Canadian Ski Coaching Federation Development Level (DL) Trained Certification: Successfully completed a 5-day Development level coaching course in February 2017 at Craigleith Ski Club. This certification allows me to set Slalom and Giant Slalom courses in accordance with the rules set by the Federation of Independent Skiers. Two Days of the course were spent Learning NCCP coaching Theory relevant to all sports.</li>
 			<li>First aid with CPR & AED: Successfully completed Standard First Aid Level C Course with Toronto CPR in August 2016</li>
-		</ul>
-		<a href = "http://whmis.org/"><img src="images/whmis.png" ></a>
+		</ul><a href="http://whmis.org/"><img src="images/whmis.png"></a>
 		<ul>
 			<li>Sucsessfully completed Workplace Hazardous Material Information System training session as well as Health and Safety Awareness certification on September 30th 2017 through Queen's University</li>
-
 		</ul>
 	</div>
 </body>
