--- a/connect.html
+++ b/connect.html
@@ -4,10 +4,19 @@
 	<title>Mathew Jennings</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
-	<link href="css/popup
-	.css" rel="stylesheet">
+	<link href="css/popup.css" rel="stylesheet">
 	<!-- Mobile redirect script by https://pagecrafter.com -->
+	<!-- Modal from w3schools.com -->
+	<script src="js/redirection-mobile.js" type="text/javascript">
+	</script>
+	<script type="text/javascript">
+	          // <![CDATA[
+	          SA.redirection_mobile({
+	              mobile_url: "mjennings2.github.io/connectmobile.html",
+	          });
 
+	          // ]]>
+	</script>
 </head>
 <body>
 	<div id="menu">
@@ -31,49 +40,42 @@
 			</tr>
 		</table>
 	</div>
-		<div id = "connectbody">
-		<a href="https://github.com/mjennings2"><img src="images/githublogo.png" width="150px" height="150px"></a>
-		<a href="https://www.linkedin.com/in/mathew-jennings-430847a7/"><img src="images/linkedin.svg" width="150px" height="150px"></a>
-		<a href="mailto:15mj35@queensu.ca?"><img src="images/email.png" width="150px" height="150px"></a>	
-		<a id="myBtn"><img src="images/phone.png" width="150px" height="150px"></a>
-
-		<!-- The Modal -->
-		<div id="myModal" class="modal">
-
-		  <!-- Modal content -->
-		  <div class="modal-content">
-		    <span class="close">&times;</span>
-		    <p>(647) - 330 - 4286</p>
-		  </div>
-
-		</div>	
+	<div id="connectbody">
+		<a href="https://github.com/mjennings2"><img height="150px" src="images/githublogo.png" width="150px"></a> <a href="https://www.linkedin.com/in/mathew-jennings-430847a7/"><img height="150px" src="images/linkedin.svg" width="150px"></a> <a href="mailto:15mj35@queensu.ca?"><img height="150px" src="images/email.png" width="150px"></a> <a id="myBtn"><img height="150px" src="images/phone.png" width="150px"></a> <!-- The Modal -->
+		<div class="modal" id="myModal">
+			<!-- Modal content -->
+			<div class="modal-content">
+				<span class="close">&times;</span>
+				<p>(647) - 330 - 4286</p>
+			</div>
 		</div>
+	</div>
 	<script>
-	// Get the modal
-	var modal = document.getElementById('myModal');
+	       // Get the modal
+	       var modal = document.getElementById('myModal');
 
-	// Get the button that opens the modal
-	var btn = document.getElementById("myBtn");
+	       // Get the button that opens the modal
+	       var btn = document.getElementById("myBtn");
 
-	// Get the <span> element that closes the modal
-	var span = document.getElementsByClassName("close")[0];
+	       // Get the <span> element that closes the modal
+	       var span = document.getElementsByClassName("close")[0];
 
-	// When the user clicks the button, open the modal 
-	btn.onclick = function() {
-	    modal.style.display = "block";
-	}
+	       // When the user clicks the button, open the modal 
+	       btn.onclick = function() {
+	           modal.style.display = "block";
+	       }
 
-	// When the user clicks on <span> (x), close the modal
-	span.onclick = function() {
-	    modal.style.display = "none";
-	}
+	       // When the user clicks on <span> (x), close the modal
+	       span.onclick = function() {
+	           modal.style.display = "none";
+	       }
 
-	// When the user clicks anywhere outside of the modal, close it
-	window.onclick = function(event) {
-	    if (event.target == modal) {
-	        modal.style.display = "none";
-	    }
-	}
+	       // When the user clicks anywhere outside of the modal, close it
+	       window.onclick = function(event) {
+	           if (event.target == modal) {
+	               modal.style.display = "none";
+	           }
+	       }
 	</script>
 </body>
 </html>
