--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <title>Mathew Jennings</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet"><!-- Mobile redirect script by https://pagecrafter.com -->
-
+    <link href="css/index.css" rel="stylesheet">
+    <!-- Mobile redirect script by https://pagecrafter.com -->
     <script src="js/redirection-mobile.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-           // <![CDATA[
-           SA.redirection_mobile({
-               mobile_url: "mjennings2.github.io/mobile.html",
-           });
+              // <![CDATA[
+              SA.redirection_mobile({
+                  mobile_url: "mjennings2.github.io/mobile.html",
+              });
 
-           // ]]>
+              // ]]>
     </script>
 </head>
 <body>
@@ -49,7 +49,6 @@
                 <li>Awarded Head's Honour Roll for having an academic average over 90% in Grade 11 and 12.</li>
                 <li>Represented Craigleith Ski Club in the Ontario K1 provincial ski championships for two years in a row (2011, 2012) and the Ontario K2 provincial ski championships for 3 years (2013, 2014, and 2015).</li>
                 <li>Represented Queen City Yacht Club in Steerers' Regatta and Four Sister's Regatta.</li>
-
             </ul>
             <h3 class="body">Education</h3>
             <table>
