--- a/workhistorymobile.html
+++ b/workhistorymobile.html
@@ -1,109 +1,119 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mathew Jennings</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
-    <link href="css/mobile.css" rel="stylesheet">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <script src="js/index.js" type="text/javascript">
-    </script>
+  <title>Mathew Jennings</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Raleway" rel="stylesheet">
+  <link href="css/mobile.css" rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <script src="js/index.js" type="text/javascript">
+  </script>
 </head>
 <body>
-	<div id="menu">
-        <div class="container" onclick="expand(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
-        <div class="panel">
-            <table id="menutable">
-                <tr>
-                    <td>
-                        <a class="menulink" href="mobile.html">Home</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="workhistorymobile.html">Work History and Volenteering</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="certificationsmobile.html">Certifications</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="athleticsmobile.html">Athletics</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="#5">Connect</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="menulink" href="workhistory.html">Desktop Version</a>
-                    </td>
-                </tr>
-            </table>
-        </div>
+  <div id="menu">
+    <div class="container" onclick="expand(this)">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
     </div>
+    <div class="panel">
+      <table id="menutable">
+        <tr>
+          <td>
+            <a class="menulink" href="mobile.html">Home</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="workhistorymobile.html">Work History and Volenteering</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="certificationsmobile.html">Certifications</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="athleticsmobile.html">Athletics</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="connectmobile.html">Connect</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a class="menulink" href="workhistory.html">Desktop Version</a>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div id="whbody">
+    <table>
+      <tr>
+        <td>
+          <a href="http://www.craigleith.com/"><img class="logo" id="craigleithlogo" src="images/craigleith.png"></a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Under 10 Ski Coach<br>
+          Craigleith Ski Club</b> - The Blue Mountains<br></p>
+          <ul>
+            <li>Experienced racer deploying my strong skills to coach entry level ski racing to a team of eight and nine-year olds, serving as a positive role model for team participants and community members.</li>
+            <li>Support on hill activities including assisting the maintenance crew to set up protective netting on the hills and working on ski courses for racers.</li>
+            <li>Support and encourage young athletes at some of the first races of their ski career - which can be some of the most important races in shaping their love of ski-racing.</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://www.qcyc.ca/"><img class="logo" src="images/QCYC.png"></a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Sailing Instructor<br>
+          Queen City Yacht Club</b> - Algonquin Island, Toronto<br></p>
+          <ul>
+            <li>Taught CANSail 1 & 2 athletes sailing skills, ensured safety in boats, and motivated athletes to improve their skills. Skills taught ranged from points of sail to proper tacking techniques. Also gained experience teaching CANSail 3 & 4 athletes filling in for instructors as needed.</li>
+            <li>Led on-shore activities including various team building games such as volleyball, soccer, "opti-ball", etc.</li>
+            <li>Effective problem solver and strong ability to manage any issues that arose with boats on the water.</li>
+            <li>Regularly maintained dinghies including the Club 420 and the Laser Pico.</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td><img class="logo" src="images/shingling.png"></td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Roof Shingler<br>
+          Self Employed</b> - Toronto, Ontario<br></p>
+          <ul>
+            <li>Through my own initiative, developed skills to install, repair, and replace single-ply roofing systems on small roofs that big roofing companies refused to roof. Independently solicited work and completed a number of projects.</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <script>
+            var acc = document.getElementsByClassName("container");
+            var i;
 
-	<div id = "whbody" >
-		<table>
-			<tr>
-				<td><a href = "http://www.craigleith.com/"><img src="images/craigleith.png" id = "craigleithlogo" class = "logo"></a></td>
-			</tr>
-			<tr>
-				<td><p><b>Under 10 Ski Coach<br>Craigleith Ski Club</b> - The Blue Mountains<br>
-					<ul>
-						<li>Experienced racer deploying my strong skills to coach entry level ski racing to a team of eight and nine-year olds, serving as a positive role model for team participants and community members.</li>
-						<li>Support on hill activities including assisting the maintenance crew to set up protective netting on the hills and working on ski courses for racers.</li>
-						<li>Support and encourage young athletes at some of the first races of their ski career - which can be some of the most important races in shaping their love of ski-racing.</li> 
-					</ul>
-				</td>
-			</tr>
-			<tr>
-				<td><a href = "https://www.qcyc.ca/"><img src="images/QCYC.png" class = "logo" ></a></td>
-			</tr>
-			<tr>
-				<td><p><b>Sailing Instructor<br>Queen City Yacht Club</b> - Algonquin Island, Toronto<br>
-					<ul>
-						<li>Taught CANSail 1 & 2 athletes sailing skills, ensured safety in boats, and motivated athletes to improve their skills. Skills taught ranged from points of sail to proper tacking techniques. Also gained experience teaching CANSail 3 & 4 athletes filling in for instructors as needed.</li>
-						<li>Led on-shore activities including various team building games such as volleyball, soccer, "opti-ball", etc. </li>
-						<li>Effective problem solver and strong ability to manage any issues that arose with boats on the water.</li> 
-						<li>Regularly maintained dinghies including the Club 420 and the Laser Pico.</li>
-					</ul>
-				</td>
-			</tr>
-			<tr>
-				<td><img src="images/shingling.png" class = "logo" ></td>
-			</tr>
-			<tr>
-				<td><p><b>Roof Shingler<br>Self Employed</b> - Toronto, Ontario<br>
-					<ul>
-						<li>Through my own initiative, developed skills to install, repair, and replace single-ply roofing systems on small roofs that big roofing companies refused to roof. Independently solicited work and completed a number of projects.</li>
-				</td>
-			</tr>
-		</table>
-	</div>
-	<script>
-           var acc = document.getElementsByClassName("container");
-           var i;
-
-           for (i = 0; i < acc.length; i++) {
-               acc[i].addEventListener("click", function() {
-                   this.classList.toggle("active");
-                   var panel = this.nextElementSibling;
-                   if (panel.style.display === "block") {
-                       panel.style.display = "none";
-                   } else {
-                       panel.style.display = "block";
-                   }
-               });
-           }
-    </script>
+            for (i = 0; i < acc.length; i++) {
+                acc[i].addEventListener("click", function() {
+                    this.classList.toggle("active");
+                    var panel = this.nextElementSibling;
+                    if (panel.style.display === "block") {
+                        panel.style.display = "none";
+                    } else {
+                        panel.style.display = "block";
+                    }
+                });
+            }
+  </script>
 </body>
 </html>
