--- a/athletics.html
+++ b/athletics.html
@@ -24,7 +24,7 @@
 					<a class="menulink" href="index.html">Home</a>
 				</td>
 				<td>
-					<a class="menulink" href="workhistory.html">Work History and Volenteering</a>
+					<a class="menulink" href="workhistory.html">Work History and Volunteering</a>
 				</td>
 				<td>
 					<a class="menulink" href="certifications.html">Certifications</a>
