--- a/connectmobile.html
+++ b/connectmobile.html
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="menulink" href="workhistorymobile.html">Work History and Volenteering</a>
+                        <a class="menulink" href="workhistorymobile.html">Work History and Volunteering</a>
                     </td>
                 </tr>
                 <tr>
