--- a/mobile.html
+++ b/mobile.html
@@ -24,7 +24,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="menulink" href="workhistorymobile.html">Work History and Volenteering</a>
+                        <a class="menulink" href="workhistorymobile.html">Work History and Volunteering</a>
                     </td>
                 </tr>
                 <tr>
