--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </center>
                     </td>
                     <td>
-                        <p class="body">Attending Queens University completeing a bachlors degree in <a href="https://engineering.queensu.ca/explore-programs/undergraduate-programs/mathematics-and-engineering/">Matamatics and Engineering</a>, Computing and Communications Option.</p>
+                        <p class="body">Attending Queens University completing a bachelor's degree in Mathematics and Engineering, Computing and Communications Option.</p>
                     </td>
                 </tr>
             </table>
