--- a/mobile.html
+++ b/mobile.html
@@ -61,7 +61,7 @@
             <center class="image">
                 <img height="200px" src="images/queens.png" width="200px">
             </center>
-            <p class="body">Attending Queens University completeing a bachlors degree in <a href="https://engineering.queensu.ca/explore-programs/undergraduate-programs/mathematics-and-engineering/">Matamatics and Engineering</a>, Computing and Communications Option.</p>
+            <p class="body">Attending Queens University completing a bachelor's degree in Mathematics and Engineering, Computing and Communications Option.</p>
         </div>
         <div id="toolbox">
             <h2 class="centered">Tool Box</h2>
