Clean up and grammer

--- a/certificationsmobile.html
+++ b/certificationsmobile.html
@@ -63,7 +63,7 @@
       <li>First aid with CPR & AED: Successfully completed Standard First Aid Level C Course with Toronto CPR in August 2016</li>
     </ul><a href="http://whmis.org/"><img class="logo" src="images/whmis.png"></a>
     <ul>
-      <li>Sucsessfully completed Workplace Hazardous Material Information System training session as well as Health and Safety Awareness certification on September 30th 2017 through Queen's University</li>
+      <li>Successfully completed Workplace Hazardous Material Information System training session as well as Health and Safety Awareness certification on September 30th 2017 through Queen's University</li>
     </ul>
   </div>
   <script>
