--- a/workhistorymobile.html
+++ b/workhistorymobile.html
@@ -58,7 +58,7 @@
           Craigleith Ski Club</b> - The Blue Mountains<br></p>
           <ul>
             <li>Experienced racer deploying my strong skills to coach entry level ski racing to a team of eight and nine-year olds, serving as a positive role model for team participants and community members.</li>
-            <li>Support on hill activities including assisting the maintenance crew to set up protective netting on the hills and working on ski courses for racers.</li>
+            <li>Support on hill activities including assisting the maintenance crew to set protective netting on the hills and working on ski courses for racers.</li>
             <li>Support and encourage young athletes at some of the first races of their ski career - which can be some of the most important races in shaping their love of ski-racing.</li>
           </ul>
         </td>
@@ -73,10 +73,11 @@
           <p><b>Sailing Instructor<br>
           Queen City Yacht Club</b> - Algonquin Island, Toronto<br></p>
           <ul>
-            <li>Taught CANSail 1 & 2 athletes sailing skills, ensured safety in boats, and motivated athletes to improve their skills. Skills taught ranged from points of sail to proper tacking techniques. Also gained experience teaching CANSail 3 & 4 athletes filling in for instructors as needed.</li>
-            <li>Led on-shore activities including various team building games such as volleyball, soccer, "opti-ball", etc.</li>
-            <li>Effective problem solver and strong ability to manage any issues that arose with boats on the water.</li>
-            <li>Regularly maintained dinghies including the Club 420 and the Laser Pico.</li>
+            <li>Taught CANSail 1 & 2 athletes aged 8 to 12 and adult evening sessions.</li>
+						<li>Teaching boat safety and sailing skills on the water and in a classroom setting for groups of 14 children.</li>
+						<li>Ensured safety in boats, and motivated athletes to improve their skills.</li>
+						<li>Led on-shore activities including various team building games such as volleyball, soccer, "opti-ball", etc.</li>
+						<li>Effective problem solver and strong ability to manage any issues that arose with boats on the water.</li>
           </ul>
         </td>
       </tr>
