--- a/mobile.html
+++ b/mobile.html
@@ -48,14 +48,13 @@
     <div id="body">
         <div id="about">
             <h1 class="title">About Me</h1><img align="center" height="400px" id="picture-of-me" src="images/Me.png">
-            <p class="body">Skilled Ski Coach and Sailing Instructor with in-depth knowledge of how to teach kids to give them the best start in sailing or skiing. Consistently motivates and inspires players to work on improving their skills every day. Looking to use what I've learned at school to gain practical expirience in the software engineering field.</p>
-            <p class="body">Since first taking AP Computer Science In grade 11 and becoming the head of my school's programming club, I have gained a love for programming both in school and as a hobby. My goal is to become a Software Engineer.</p>
+            <p class="body">Skilled Ski Coach and Sailing Instructor with in-depth knowledge of how to teach kids to give them the best start in sailing or skiing. Consistently motivates and inspires players to work on improving their skills every day. Looking to use what I've learned at school to gain practical experience in the software engineering field.</p>
             <h3 class="body">Accomplishments</h3>
             <ul>
-                <li>Won the Computer Science Award for academic achievement in 2015 and 2016. I was selected out of 80 students.</li>
-                <li>Awarded Head's Honour Roll for having an academic average over 90% in Grade 11 and 12.</li>
-                <li>Represented Craigleith Ski Club in the Ontario K1 provincial ski championships for two years in a row (2011, 2012) and the Ontario K2 provincial ski championships for 3 years (2013, 2014, and 2015).</li>
-                <li>Represented Queen City Yacht Club in Steerers' Regatta and Four Sister's Regatta.</li>
+              <li>Won the Computer Science Award for academic achievement in 2015 and 2016. I was selected out of 80 students.</li>
+              <li>Awarded Head's Honour Roll for having an academic average over 90% in Grade 11 and 12.</li>
+              <li>Represented Craigleith Ski Club in the Ontario K1 provincial ski championships for two years in a row (2011, 2012) and the Ontario K2 provincial ski championships for 3 years (2013, 2014, and 2015).</li>
+              <li>Represented Queen City Yacht Club in Steerers' Regatta and Four Sister's Regatta.</li>
             </ul>
             <h3 class="body">Education</h3>
             <center class="image">
@@ -65,10 +64,10 @@
         </div>
         <div id="toolbox">
             <h2 class="centered">Tool Box</h2>
-            <p><b>Skills:</b> Leading, Motivating, Problem solving, Communication.</p>
+            <p><b>Skills:</b> Problem solving, Information Structures, Object Oriented Design, Algebraic Analysis, Leader.</p>
             <p><b>Languages and Libraries:</b> C, CSS, HTML, Java, Javascript (JQuery), MATLAB.</p>
             <p><b>Hardware and Operating Systems:</b> Arduino, Macintosh, Ubuntu, Windows.</p>
-            <p><b>Other Program Proficiency:</b> Adobe Suite (Acrobat, After Effects, Photoshop, Priemier), Microsoft Suite (Excel, OneNote, Powerpoint, Publisher, Word) .</p>
+            <p><b>Other Program Proficiency:</b> Adobe Suite (Acrobat, After Effects, Photoshop, Priemier), Microsoft Suite (Excel, OneNote, Powerpoint, Publisher, Word).</p>
         </div>
     </div>
     <script>
