--- a/mobile.html
+++ b/mobile.html
@@ -67,7 +67,7 @@
       <h3 class="body">Accomplishments</h3>
 
       <ul>
-        <li>1st place in the Queen&rsquo;s Engineering Competition 2019 for
+        <li>Representing Queen’s at the 2020 Ontario Engineering Competition for 
         Innovation</li>
 
         <li>Won the Computer Science Award for academic achievement in 2015 and 2016. I
