--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div id="right">
       <table id="rright">
         <tr>
-          <td><img align="center" height="400px" id="picture-of-me" src="images/Me.png"
+          <td><img align="center" height="400px" id="picture-of-me" src="images/Mathew-8.jpg"
           name="picture-of-me" /></td>
         </tr>
 
