--- a/mobile.html
+++ b/mobile.html
@@ -56,7 +56,7 @@
   <div id="body">
     <div id="about">
       <h1 class="title">About Me</h1><img align="center" height="400px" id=
-      "picture-of-me" src="images/Me.png" name="picture-of-me" />
+      "picture-of-me" src="images/Mathew-8.jpg" name="picture-of-me" />
 
       <p class="body">Engineering student at Queens University, in my third year of the
       Mathematics and Engineering, Computing and Communications Program. Skilled Ski
