--- a/mobile.html
+++ b/mobile.html
@@ -61,7 +61,7 @@
       <p class="body">Engineering student at Queens University, in my third year of the
       Mathematics and Engineering, Computing and Communications Program. Skilled Ski
       Coach and Sailing Instructor with in-depth knowledge of how to teach kids to give
-      them the best start in sailing or skiing. I am pursuing a career on software
+      them the best start in sailing or skiing. I am pursuing a career in software
       development, and am very interested in applications of machine learning.</p>
 
       <h3 class="body">Accomplishments</h3>
