--- a/athletics.html
+++ b/athletics.html
@@ -18,27 +18,26 @@
 </head>
 <body>
 	<div id="menu">
-		<table id="menutable">
-			<tr>
-				<td>
-					<a class="menulink" href="index.html">Home</a>
-				</td>
-				<td>
-					<a class="menulink" href="workhistory.html">Work History and Volunteering</a>
-				</td>
-				<td>
-					<a class="menulink" href="certifications.html">Certifications</a>
-				</td>
-				<td>
-					<a class="menulink" href="athletics.html">Athletics</a>
-				</td>
-				<td>
-					<a class="menulink" href="connect.html">Connect</a>
-				</td>
-			</tr>
-		</table>
-	</div>
-	<div id="abody">
+        <table id="menutable">
+          <tr class = "menurow">
+            <td><a class="menulink" href="index.html">Home</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="workhistory.html">Work History and
+            Volunteering</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="certifications.html">Certifications</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="athletics.html">Athletics</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="connect.html">Connect</a></td>
+          </tr>
+        </table>
+      </div>
+	<div id="body">
 		<table>
 			<tr>
 				<td>
@@ -47,6 +46,10 @@
 				</td>
 				<td><img class="pic" src="images/skiing.png"></td>
 			</tr>
+		</table>
+	</div>
+	<div id="body">
+		<table>
 			<tr>
 				<td>
 					<h2>Sailing</h2>
