--- a/connect.html
+++ b/connect.html
@@ -20,27 +20,26 @@
 </head>
 <body>
 	<div id="menu">
-		<table id="menutable">
-			<tr>
-				<td>
-					<a class="menulink" href="index.html">Home</a>
-				</td>
-				<td>
-					<a class="menulink" href="workhistory.html">Work History and Volunteering</a>
-				</td>
-				<td>
-					<a class="menulink" href="certifications.html">Certifications</a>
-				</td>
-				<td>
-					<a class="menulink" href="athletics.html">Athletics</a>
-				</td>
-				<td>
-					<a class="menulink" href="connect.html">Connect</a>
-				</td>
-			</tr>
-		</table>
-	</div>
-	<div id="connectbody">
+        <table id="menutable">
+          <tr class = "menurow">
+            <td><a class="menulink" href="index.html">Home</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="workhistory.html">Work History and
+            Volunteering</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="certifications.html">Certifications</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="athletics.html">Athletics</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="connect.html">Connect</a></td>
+          </tr>
+        </table>
+      </div>
+	<div id="cbody">
 		<a href="https://github.com/mjennings2"><img height="150px" src="images/githublogo.png" width="150px"></a> <a href="https://www.linkedin.com/in/mathew-jennings-430847a7/"><img height="150px" src="images/linkedin.svg" width="150px"></a> <a href="mailto:15mj35@queensu.ca?"><img height="150px" src="images/email.png" width="150px"></a> <a id="myBtn"><img height="150px" src="images/phone.png" width="150px"></a> <!-- The Modal -->
 		<div class="modal" id="myModal">
 			<!-- Modal content -->
