--- a/workhistory.html
+++ b/workhistory.html
@@ -18,28 +18,27 @@
 </head>
 <body>
 	<div id="menu">
-		<table id="menutable">
-			<tr>
-				<td>
-					<a class="menulink" href="index.html">Home</a>
-				</td>
-				<td>
-					<a class="menulink" href="workhistory.html">Work History and Volunteering</a>
-				</td>
-				<td>
-					<a class="menulink" href="certifications.html">Certifications</a>
-				</td>
-				<td>
-					<a class="menulink" href="athletics.html">Athletics</a>
-				</td>
-				<td>
-					<a class="menulink" href="connect.html">Connect</a>
-				</td>
-			</tr>
-		</table>
-	</div>
+        <table id="menutable">
+          <tr class = "menurow">
+            <td><a class="menulink" href="index.html">Home</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="workhistory.html">Work History and
+            Volunteering</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="certifications.html">Certifications</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="athletics.html">Athletics</a></td>
+          </tr>
+          <tr class = "menurow">
+            <td><a class="menulink" href="connect.html">Connect</a></td>
+          </tr>
+        </table>
+      </div>
 	<div id="body">
-		<table>
+		<table class = "left">
 			<tr>
 				<td>
 					<a href="http://www.craigleith.com/"><img id="logo" src="images/craigleith.png"></a>
@@ -54,7 +53,11 @@
 					</ul>
 				</td>
 			</tr>
-			<tr>
+		</table>
+	</div>
+	<div id = "body">
+		<table>
+			<tr class ="left">
 				<td>
 					<a href="https://www.qcyc.ca/"><img id="logo" src="images/QCYC.png"></a>
 				</td>
@@ -70,6 +73,10 @@
 					</ul>
 				</td>
 			</tr>
+		</table>
+	</div>
+	<div id = "body">
+		<table class = "left">
 			<tr>
 				<td><img id="logo" src="images/shingling.png"></td>
 				<td>
