--- a/mobile.html
+++ b/mobile.html
@@ -93,31 +93,29 @@
       <table class = "left">
         <tr>
           <td>
-            <p><b>Relavent Courses:</b></p>
-            <ul>
-              <li><a href ="https://www.ece.queensu.ca/undergraduate/courses/elec-274.html">Computer Architecture</a></li>
+            <p class = "center"><b>Relavent Courses</b></p>
 
-              <li><a href ="https://www.coursera.org/learn/machine-learning">Machine Learning &amp; Neural Networks</a></li>
+              <a class = "button" href ="https://www.ece.queensu.ca/undergraduate/courses/elec-274.html">Computer Architecture</a>
 
-              <li><a href ="https://www.ece.queensu.ca/undergraduate/courses/elec-278.html">Data Structures 
-              &amp; Algorithms</a></li>
+              <a class = "button" href ="https://www.coursera.org/learn/machine-learning">Machine Learning &amp; Neural Networks</a>
+
+              <a class = "button" href ="https://www.ece.queensu.ca/undergraduate/courses/elec-278.html">Data Structures 
+              &amp; Algorithms</a>
               
-            </ul>
-            <ul>
-              <li><a href ="https://www.ece.queensu.ca/undergraduate/courses/elec-221.html">Circuits</a> &amp; 
-                <a href ="https://www.ece.queensu.ca/undergraduate/courses/elec-252.html">Electronics</a></li>
+              <a class = "button" href ="https://www.ece.queensu.ca/undergraduate/courses/elec-221.html">Circuits</a> 
+              <a class = "button" href ="https://www.ece.queensu.ca/undergraduate/courses/elec-252.html">Electronics</a>
 
-              <li><a href ="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=3749">Computing Science</a></li>
+              <a class = "button" href ="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=3749">Computing Science</a>
 
-              <li><a href ="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4093">Real</a> &amp; <a href = "https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=8&coid=4668">Complex Analysis</a></li>
-            </ul>
-            <ul>
-              <li>Probability &amp; Statistics:  <a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=2&coid=1018"> I </a> &amp; <a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4104"> II </a></li>
+              <a class = "button" href ="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4093">Real  Analysis</a> 
+              <a class = "button" href = "https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=8&coid=4668">Complex Analysis</a>
+            
+                <a class = "button" href =             "https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=2&coid=1018">Probability &amp; Statistics: I </a> <a class =     "button" href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4104">Probability &amp; Statistics: II </a>
 
-              <li><a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4082">Linear Algebra</a> &amp; <a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=8&coid=4656">Algebraic Structures</a></li>
+              <a class = "button" href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4082">Linear Algebra</a>
+              <a class = "button" href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=8&coid=4656">Algebraic Structures</a>
 
-              <li><a href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4090">Differential Equations</a></li>
-            </ul>
+              <a class = "button" href="https://calendar.engineering.queensu.ca/preview_course_nopop.php?catoid=7&coid=4090">Differential Equations</a>
           </td>
         </tr>
       </table>
