--- a/Test/index.html
+++ b/Test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>test</title>
-	<link href="test.css" rel="stylesheet" type="text/css" />
+	<link href="css/test.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div style="margin-right:auto;width:11%;height:100%;background-color: blue;position: fixed;">
