--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>test</title>
-  <link href="test.css" rel="stylesheet" type="text/css" />
+	<title>test</title>
+	<link href="css/test.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div style="margin-right:auto;width:11%;height:100%;background-color: blue;position: fixed;">
-  <div style="display:flex;justify-content:center;align-items:center;height:100%;"> 
-    <table>
-      <tr>
-              <td> <a href="index.html" ><img id="logo" src="images/house.jpg" width = "100%"></a></td>
-           </tr>
-           <tr>
-              <td ><a href="workhistory.html"><img id="logo" src="images/house.jpg" width = "100%"></a></td>
-           </tr>
-           <tr>
-              <td><a href="certifications.html"><img id="logo" src="images/house.jpg" width = "100%"></a></td>
-           </tr>
-           <tr>
-              <td><a href="athletics.html"><img id="logo" src="images/house.jpg" width = "100%"></a></td>
-           </tr>
-           <tr>
-              <td><a href="connect.html"><img id="logo" src="images/house.jpg" width = "100%"></a></td>
-           </tr>
-      </table>
-  </div> 
+	<div style="margin-right:auto;width:11%;max-width:200px;height:100%;background-color: blue;position: fixed;">
+	<div style="display:flex;justify-content:center;align-items:center;height:100%;">	
+		<table>
+		 	<tr>
+	            <td> <a href="index.html" ><img id="logo" src="images/house.png" width = "100%"></a></td>
+	         </tr>
+	         <tr>
+	            <td ><a href="workhistory.html"><img id="logo" src="images/work.png" width = "100%"></a></td>
+	         </tr>
+	         <tr>
+	            <td><a href="certifications.html"><img id="logo" src="images/certs.png" width = "100%"></a></td>
+	         </tr>
+	         <tr>
+	            <td><a href="athletics.html"><img id="logo" src="images/sports.png" width = "100%"></a></td>
+	         </tr>
+	         <tr>
+	            <td><a href="connect.html"><img id="logo" src="images/connect.png" width = "100%"></a></td>
+	         </tr>
+	    </table>
+	</div> 
 </div>
 
 <div style="margin-left:auto; width:94%;">
-  <div style="margin-left:auto; width:100%;">
-  <h1 align="center">About Me</h1></div><img align="center" height="400px" id=
+	<div style="margin-left:auto; width:100%;">
+	<h1 align="center">About Me</h1></div><img  id=
       "picture-of-me" src="images/mesailing.jpg" name="picture-of-me" />
   
   <div style="margin-left:auto; width:88%;">
